k8s/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    name: payments
    istio-injection: enabled
